feat: spa client for single binary deployment (#19)
* feat(dashboard): generate spa bundles with remix

* feat(core): serve index html directly from api

* chore: automatically embed dashboard and tracker into core binary

* feat: embed tracker js into binary

* fix(core): apply cors to all routes

* fix: spa cookie auth management simplification

* fix: logout cookies from api side

* ci: install dashboard dependencies

* ci: install dashboard deps for lint as well

* fix: lints and tests
