# dashboard/app/api/auth.ts
@@ -1,14 +1,13 @@
-import { json } from '@remix-run/node';
-
 import { client, type ClientOptions, type DataResponse } from './client';
 
 const authLogin = async (
 	opts: ClientOptions<'AuthLogin'>,
 ): Promise<DataResponse> => {
-	const res = await client('/auth/login', { method: 'POST', ...opts });
-	const cookie = res.headers.get('Set-Cookie');
-	if (!cookie) throw json('Failed to get session.', { status: 401 });
-	return { cookie, res };
+	return { res: await client('/auth/login', { method: 'POST', ...opts }) };
 };
 
-export { authLogin };
+const authLogout = async (): Promise<DataResponse> => {
+	return { res: await client('/auth/logout', { method: 'POST' }) };
+};
+
+export { authLogin, authLogout };
